src/styles.css
@import 'styles/colours.css';

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 100 900;
  font-display: swap;
  src: url(assets/Inter.var.woff2) format('woff2');
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

  color: var(--color);
  background-color: var(--background-color-secondary);
}

* {
  transition: var(--theme-change-transition);
}

.hero {
  position: absolute;
  top: 0;
  width: 100%;
}

.hero-container {
  position: relative;
  background-color: var(--background-color-secondary);
}

.hero-content {
  max-width: 1300px;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

nav {
  position: relative;
  background-color: var(--nav-background-color);
  box-shadow: 0px 1px 0px 0px var(--border);
  z-index: 1;
}

.motd {
  box-shadow: 0px 1px 0px 0px var(--border) !important;
  z-index: 2;
}

.motd > .nav-container {
  padding: 11.5px 0;
  justify-content: center;
  font-size: 14px;
  height: unset !important;
  text-align: center;
  min-height: 17px;
}

.motd > .nav-container > span > a {
  color: var(--text-primary);
  text-decoration: none;
}

.motd > .nav-container > span > a:hover {
  opacity: 0.6;
}

.nav-container {
  max-width: 1300px;
  height: 64px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  overflow: hidden;
}

.nav-left,
.nav-right {
  display: flex;
  height: 64px;
  align-items: center;
}

.nav-right {
  gap: 16px;
}

.dot-icon {
  width: 36px;
  height: 36px;
  border-radius: 100px;
  background-color: var(--color);
  display: block;
}

.nav-items {
  list-style: none;
  display: flex;
  gap: 32px;
  font-weight: 600;
  font-size: 15px;
  color: var(--color);

  user-select: none;
}

.nav-items > li {
  height: 64px;
  display: flex;
  align-items: center;
  padding: 0px 4px;
}

.nav-items > li:hover {
  color: var(--nav-hover);
  cursor: pointer;
}

.nav-items > li > a {
  text-decoration: none;
  color: inherit;
}

.nav-items > li > button {
  user-select: none;
}

.btn {
  appearance: none;
  border-radius: 8px;
  border: none;
  outline: none;
  font-weight: 600;
  font-size: 14px;
  font-family: inherit;
  cursor: pointer;
  padding: 0;
}

.btn > a {
  text-decoration: none;
  color: inherit;
  display: flex;
  align-items: center;
  padding: var(--padding, 10px 20px);
}

.btn-primary {
  background-color: var(--btn-primary);
  color: var(--btn-primary-color);
}

.btn-primary:hover {
  background-color: var(--btn-primary-hover);
}

.btn-secondary {
  background-color: var(--btn-secondary);
  color: var(--btn-secondary-color);
}

.btn-secondary:hover {
  background-color: var(--btn-secondary-hover);
}

.btn-text {
  background-color: transparent;
  color: var(--btn-primary-color);
}

.btn-primary:hover {
  background-color: var(--btn-primary-hover);
}

.hero-center {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 100vh;
}

h1,
h2,
h3,
h4 {
  margin: 0;
}

h1 {
  font-size: 36px;
  font-weight: 700;
}

h2 {
  font-size: 32px;
  font-weight: 600;
}

h3 {
  font-size: 28px;
  font-weight: 500;
}

h4 {
  font-size: 24px;
  font-weight: 500;
}

p {
  font-size: 16px;
  font-weight: 400;
  opacity: 0.8;
}

.hmm-icon {
  background-image: url(assets/hmm.svg);
  background-size: cover;
  width: 64px;
  height: 64px;
}

.cryhmm-icon {
  background-image: url(assets/cryhmm.svg);
  background-size: cover;
  width: 64px;
  height: 64px;
}

.back-icon {
  background-image: url(assets/back.svg);
  background-size: cover;
  width: 16px;
  height: 16px;
}

.menu-icon {
  background-image: url(assets/menu.svg);
  background-size: cover;
  width: 16px;
  height: 16px;
  margin-right: 0 !important;
}

.hero-vh {
  height: calc(100vh - 64px);
  display: flex;
  flex-direction: column;
  width: 100%;
}

footer {
  min-height: 250px;
  background-color: var(--nav-background-color);
  border-top: 1px solid var(--border);
}

.footer-container {
  max-width: 1300px;
  height: 100%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  overflow: hidden;
}

nav.mobile-nav {
  display: none;
}

@media only screen and (max-width: 1750px) {
  nav,
  footer,
  .hero-content {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media only screen and (max-width: 900px) {
  nav {
    display: none;
  }

  nav.motd {
    display: flex;
  }

  nav.mobile-nav {
    display: flex;
    flex-direction: column;
  }

  nav.mobile-nav > .nav-container {
    width: 100%;
    height: 100%;
  }
}

.mobile-nav > .nav-container > .nav-left,
.mobile-nav > .nav-container > .nav-right {
  width: 100vw;
}

.mobile-nav > .nav-container > .nav-right {
  justify-content: flex-end;
}

.mobile-nav {
  padding: 0 1.5rem;
}

.mobile-nav-items {
  width: 100%;
  margin-left: 0;
  padding-left: 0;
}

.mobile-nav-items > li {
  height: 56px;
  display: flex;
  align-items: center;
  padding: 0px 4px;
}

.mobile-nav-items > li:hover {
  color: var(--nav-hover);
  cursor: pointer;
}

.mobile-nav-items > li:hover > a::after {
  background-color: var(--nav-hover);
}

.mobile-nav-items > li > a {
  text-decoration: none;
  color: inherit;
  width: 100%;
  height: inherit;
  display: flex;
  align-items: center;
  font-weight: 600;
}

.mobile-nav-items > li > button {
  user-select: none;
}

.mobile-nav-items > li > a::after {
  content: '';
  width: 16px;
  height: 16px;
  mask-image: url(assets/back.svg);
  transform: scaleX(-1);
  background-color: var(--color);
  mask-size: cover;
  mask-repeat: no-repeat;
  position: absolute;
  right: 0;
  margin-right: calc(1.5rem + 15px);
}

